--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E151'
 - !lcsh 'United States -- History'
+- GITenberg
 title: 'Great Epochs in American History, Volume I.
 
   Voyages Of Discovery And Early Explorations: 1000 A.D.-1682'
